# Driver-Drowsiness-Detection

./: .envrc  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.adoc  README.md  flake.nix  pyproject.toml  siamese_network.ipynb
docs/: ppt.adoc  ppt.html  project_report.adoc
flake/: devshells.nix  formatters.nix
src/: siamese_network.ipynb
