[project]
name = "driver-drowsiness-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=2.10.0",
    "matplotlib>=3.10.1",
    "numpy=1.21.6",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.2.3",
    "tensorflow>=2.12.0",
]